--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "firebase": "^11.1.0",
     "next": "15.1.3",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
